- Fixed localisation for stickers
- Utilised the new functionality for reply messages